<resources>
    <string name="app_name">JetPackExample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">Test</string>
    <string name="last_name">User</string>
    <string name="jetPack_introduction">JetPack Introduction</string>
    <string name="lifecycle">LifeCycle</string>
    <string name="view_binding">View Binding</string>
    <string name="data_binding">Data Binding</string>
    <string name="room">Room</string>
    <string name="method_reference">Method Reference</string>
    <string name="listener_binding">Listener Binding</string>
    <string name="hello_second_activity">Hello Second Activity</string>
    <string name="start_second_activity">Start second activity</string>
    <string name="hint_first_name">Enter FirstName</string>
</resources>